fix checkbox tick on ie11

--- a/src/customizations/input/_input.scss
+++ b/src/customizations/input/_input.scss
@@ -428,7 +428,6 @@
                 background-size: 1rem auto;
                 background-position: center;
                 background-repeat: no-repeat;
-                background-attachment: fixed;
                 will-change: border-color, background-image, content, background-attachment;
             }
         }
